--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -6,6 +6,19 @@ jobs:
   run-github-actions:
     runs-on: ubuntu-latest
     steps:
+      - name: List Files
+        run:  |
+          pwd
+          ls -a
+
+      - name: checkout
+        uses: actions/checkout/@v1
+
+      - name: List Files After
+        run:  |
+          pwd
+          ls -a
+
       - name: Simple JS Action
         id: greet
         uses: actions/hello-world-javascript-action@v1.1
